--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@ h1
 	margin-top: 250px;
 
 }
+
+table
+{
+	/*mise en page du tableau*/
+	text-align:  left;
+	margin-top: 100px;
+	line-height: 3.5em;
+	width: 100%;
+}
