--- a/style.css
+++ b/style.css
@@ -22,3 +22,13 @@ td
 	margin-right: 10%;
 	font-family: arial;
 }
+
+th
+{
+	margin-left: 5%;
+	margin-right: 10%;
+	color: blue;
+	background-color: yellow;
+	font-family: Arial;
+	text-align: center;
+}
